--- a/platform_code/assessment/templates/assessment/organisation.html
+++ b/platform_code/assessment/templates/assessment/organisation.html
@@ -24,19 +24,19 @@
     <div class="row ">
         <div class="col-ms-3 container-platform column-right">
             <ul class="nav nav-pills nav-stacked flex-column table-column-profile" role="tablist" id="PillProfile">
-                <li class="nav-item">
+                <li class="nav-item column-button">
                     <a class="nav-link profile-column active" role="tab" data-toggle="tab"
-                       aria-controls="content-eval" aria-selected="true"
+                       aria-controls="content-eval" aria-selected="true" name="column-button"
                        id="eval" href="#content-eval">{% trans "Evaluations" %}</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item column-button">
                     <a class="nav-link profile-column" role="tab" data-toggle="tab"
-                       aria-controls="content-members" aria-selected="true"
+                       aria-controls="content-members" aria-selected="true" name="column-button"
                        id="members" href="#content-members">{% trans "Members" %}</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item column-button">
                     <a class="nav-link profile-column" role="tab" data-toggle="tab"
-                       aria-controls="content-settings" aria-selected="true"
+                       aria-controls="content-settings" aria-selected="true" name="column-button"
                        id="settings" href="#content-settings">{% trans "Organisation's parameters" %}</a>
                 </li>
             </ul>
