--- a/platform_code/home/templates/home/profile-settings.html
+++ b/platform_code/home/templates/home/profile-settings.html
@@ -11,20 +11,20 @@
         <div class="col-md-3">
             <ul class="nav nav-pills nav-stacked flex-column table-column-profile" role="tablist">
                 <li class="nav-item column-button">
-                    <a class="nav-link profile-column active" data-toggle="pill"
+                    <a class="nav-link profile-column active" data-toggle="pill" name="column-button"
                        href="#content-username">{% trans "User information" %}</a>
                 </li>
                 <li class="nav-item column-button">
-                   <a class="nav-link profile-column" data-toggle="pill"
+                   <a class="nav-link profile-column" data-toggle="pill" name="column-button"
                        href="#content-password">{% trans "Password" %}</a>
                 </li>
                 <li class="nav-item column-button">
-                    <a class="nav-link profile-column" data-toggle="pill"
+                    <a class="nav-link profile-column" data-toggle="pill" name="column-button"
                        href="#content-export">{% trans "Export personnal data" %}</a>
                 </li>
 
                 <li class="nav-item column-button">
-                    <a class="nav-link profile-column" data-toggle="pill"
+                    <a class="nav-link profile-column" data-toggle="pill" name="column-button"
                        href="#content-delete">{% trans "Delete the account" %}</a>
                 </li>
             </ul>
