--- a/platform_code/home/templates/home/profile-user-evaluations.html
+++ b/platform_code/home/templates/home/profile-user-evaluations.html
@@ -64,14 +64,14 @@
                                     >{% trans "Results" %}</a>
                                       <a href="#" data-toggle="modal" data-target="#modal-upgrade-eval{{evaluation.id}}"
                                        class="btn btn-primary medium-button margin-10"
-                                        >{% trans "upgrade" %}</a>
+                                        >{% trans "Upgrade" %}</a>
                                 </td>
                                {% else %}
                                 <td class="case-array"><a class="btn btn-modify medium-button" href="{{ evaluation.get_absolute_url}}"
                                     >{% trans "Modify" %}</a>
                                      <a href="#" data-toggle="modal" data-target="#modal-upgrade-eval{{evaluation.id}}"
                                        class="btn btn-primary medium-button margin-10"
-                                        >{% trans "upgrade" %}</a>
+                                        >{% trans "Upgrade" %}</a>
                                 </td>
                               {% endif %}
                             {% else %}
