--- a/platform_code/home/templates/home/settings-delete.html
+++ b/platform_code/home/templates/home/settings-delete.html
@@ -9,9 +9,8 @@
 <p>{% trans "The organisations you are the only admin member will be deleted, as well as their evaluations." %}</p>
 
 <div class="">
-    <button class="btn btn-danger float-left" data-toggle="modal" data-target="#modal-delete-account">{% trans "Yes, I'm sure" %}</button>
-
-    <a class="btn btn-primary float-right color-white" href="{% url 'home:user-profile-settings' %}" >{% trans "No, back to my account" %}</a>
+    <a class="btn btn-primary same-size_220 float-left" href="{% url 'home:user-profile-settings' %}" >{% trans "No, back to my account" %}</a>
+    <button class="btn btn-danger same-size-220 float-right" data-toggle="modal" data-target="#modal-delete-account">{% trans "Yes, I'm sure" %}</button>
 
 </div>
 
@@ -28,7 +27,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary same-size-250 " data-dismiss="modal" style="margin: auto" >{% trans "Go back" %}</button>
-                <a class="btn btn-danger same-size-250 color-white" href="{% url 'home:delete-user' %}" style="margin: auto;">{% trans "Delete my account" %}</a>
+                <a class="btn btn-danger same-size-250" href="{% url 'home:delete-user' %}" style="margin: auto;">{% trans "Delete my account" %}</a>
             </div>
 
         </div>
