--- a/platform_code/home/templates/home/settings-password.html
+++ b/platform_code/home/templates/home/settings-password.html
@@ -2,8 +2,11 @@
 {% load add_attr %}
 {% load i18n %}
 
-<h3 class="settings-subtitle" >{% trans "Change password" %}</h3>
-
+<h3 class="settings-subtitle" style="display: flex;" >{% trans "Change password" %}
+    <div class="help-tip help-tip-right" style="margin-left: 20px;">
+        <p>{% trans "Your password must contain at least 8 characters, with at least one number and one letter" %}</p>
+    </div>
+    </h3>
 {% if messages %}
 <ul id="div_messages" class="messages">
     {% for message in messages %}
@@ -12,39 +15,20 @@
 </ul>
 {% endif %}
 
-<form method="post" id="ChangePassword">
-    {% csrf_token %}
-
-    {% for field in change_password_form %}
-        <div class="row" style="margin-top: 10px; margin-bottom: 20px;">
-            <div  class="col-md-3">
-                <p>{{ field.label_tag }}</p>
-            </div>
-
-            {% if forloop.counter == 2 %}
-                <div  class="col-md-3">
-                    <p>{{ field }}</p>
-                </div>
-                <div class="col-md-2">
-                    <div class="help-tip help-tip-right">
-                        <p>{% trans "Your password must contain at least 8 characters, with at least one number and one letter" %}</p>
-                    </div>
-                </div>
-
-            {% else %}
-                <div  class="col-md-3">
-                    <p>{{ field }}</p>
-                </div>
-
-            {% endif %}
-
-        </div>
-
-    {% endfor %}
-
-    <button type="button" onclick="submitUserSettingsPasswordForm('ChangePassword')"
-                                class="btn btn-primary float-right">{% trans "Modify" %}</button>
-</form>
+<div class="body change-password-form">
+    <div class="column">
+        <form method="post" id="ChangePassword">
+            {% csrf_token %}
+            {% for field in change_password_form %}
+                <span class="float-left">{{ field.label_tag }}</span>
+                 <p class="max-width">{{field}}</p>
+            {% endfor %}
+            <button type="button" onclick="submitUserSettingsPasswordForm('ChangePassword')"
+                    class="btn btn-primary">{% trans "Modify" %}
+            </button>
+        </form>
+    </div>
+</div>
 
 <div id="confirmationChangePassword"></div>
 
