--- a/platform_code/assessment/templates/assessment/base-card-section.html
+++ b/platform_code/assessment/templates/assessment/base-card-section.html
@@ -29,19 +29,23 @@
 
     <article class="card-section text-center " >
         <div class="row" style="margin-bottom: 30px">
-        <h5 class="section-card-title" title="Section {{section.master_section.order_id}}">
-            Section {{section.master_section.order_id}} </h5>
+            <h5 class="section-card-title" title="Section {{section.master_section.order_id}}">
+                Section {{section.master_section.order_id}}
+            </h5>
 
-        <div class="progress progress-section"
-             title="{% blocktrans with progression=section.user_progression %}{{ progression }}% done{% endblocktrans %}">
-            <div class="progress-bar progress-bar-section" role="progressbar"
-                 aria-valuenow="{{section.user_progression}}" style="width: {{section.user_progression}}%; background-color: #28a745;"
-                 title="{% blocktrans with progression=section.user_progression %}{{ progression }}% done {% endblocktrans %}"
-                 aria-valuemin="0" aria-valuemax="100" ></div>
-        </div>
+            <div class="progress progress-section margin-right-8"
+                 title="{% blocktrans with progression=section.user_progression %}{{ progression }}% done{% endblocktrans %}">
+                <div class="progress-bar progress-bar-section" role="progressbar"
+                     aria-valuenow="{{section.user_progression}}" style="width: {{section.user_progression}}%; background-color: #28a745;"
+                     title="{% blocktrans with progression=section.user_progression %}{{ progression }}% done {% endblocktrans %}"
+                     aria-valuemin="0" aria-valuemax="100" >
+
+                </div>
+            </div>
          </div>
         <p class="card-title-section" style="text-align: left; height: 15%;" title="{% blocktrans with name=section.master_section.name %}{{name}}{% endblocktrans %}">
-            {% blocktrans with name=section.master_section.name %}{{name}}{% endblocktrans %}</p>
+            {% blocktrans with name=section.master_section.name %}{{name}}{% endblocktrans %}
+        </p>
        <div id="image"  >
       {% if forloop.counter == 1 %}
           <img src="{% static 'image/section1.png' %}" class="card-img-top" title="card image" alt="Card image">
