--- a/platform_code/assessment/templates/assessment/creation-evaluation-modal.html
+++ b/platform_code/assessment/templates/assessment/creation-evaluation-modal.html
@@ -7,22 +7,28 @@
             <h4 class="modal-title" id="myModalLabel">{% trans "Create a new evaluation" %}</h4>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
-        <div class="modal-body modal-body-2-cols">
+        <div class="modal-body create-form">
+            <div class="column">
             {% csrf_token %}
             {% for field in form %}
             <!-- For loop on the only field in the form in order to separate the label and the field for the css grid-->
-                <p class="label-create">{{ field.label}}</p>
-                <p class="name-eval-field" > {{field}} </p>
+                <span class="float-left">{{ field.label}}</span>
+                <p > {{field}} </p>
             {% endfor %}
-            <p class="text-form">{% trans "Version" %}</p>
-            <p class="attribute-form">{{last_version}}</p>
-
+            <p class="float-left">{% trans "Version" %} : {{last_version}}</p>
+            </div>
         </div>
-        <div class="modal-footer">
-            <input type="submit" class="btn btn-primary same-size-250" value="{% trans 'Create a new evaluation' %}"
-                   style="margin: auto" />
-            <input type="button" class="btn btn-danger same-size-250" data-dismiss="modal"
-                   value="{% trans 'Cancel' %}" style="margin: auto;"/>
+        <div class="modal-footer center" style="columns: 1;">
+            <div class="column">
+                <div>
+                    <input type="submit" class="btn btn-primary same-size-250 margin-auto"
+                        value="{% trans 'Create a new evaluation' %}"/>
+                </div>
+                <div class="margin-10">
+                    <input type="button" class="btn btn-danger same-size-250 margin-auto" data-dismiss="modal"
+                        value="{% trans 'Cancel' %}"/>
+                </div>
+            </div>
         </div>
     </form>
 </div>
