--- a/platform_code/home/templates/home/profile-orga-creation-modal.html
+++ b/platform_code/home/templates/home/profile-orga-creation-modal.html
@@ -6,18 +6,28 @@
             <h4 class="modal-title" id="myModalLabel">{% trans "Create a new organisation" %}</h4>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
-        <div class="modal-body modal-body-2-cols">
+        <div class="modal-body create-form">
             {% csrf_token %}
+            <div class="column">
             {% for field in new_orga_form %}
             <!-- For loop on the only field in the form in order to separate the label and the field for the css grid-->
-                <p>{{ field.label}}</p>
+                <span class="float-left">{{ field.label}}</span>
                 <p> {{field}} </p>
             {% endfor %}
+                </div>
 
         </div>
-        <div class="modal-footer">
-            <input id="orga-creation" type="submit" class="btn btn-primary same-size-250" value="{% trans 'Create the organisation' %}" style="margin: auto" />
-            <input type="button" class="btn btn-danger same-size-250" data-dismiss="modal" value="{% trans 'Cancel' %}" style="margin: auto;"/>
+        <div class="modal-footer center" style="columns: 1">
+            <div class="column">
+                <div>
+                    <input id="orga-creation" type="submit" class="btn btn-primary same-size-250 margin-auto"
+                           value="{% trans 'Create the organisation' %}" style="margin: auto" />
+            </div>
+                <div class="margin-10">
+                    <input type="button" class="btn btn-danger same-size-250 margin-10 margin-auto"
+                           data-dismiss="modal" value="{% trans 'Cancel' %}" />
+            </div>
+                </div>
         </div>
     </form>
 </div>
