--- a/platform_code/home/templates/home/profile-organisation-creation.html
+++ b/platform_code/home/templates/home/profile-organisation-creation.html
@@ -7,25 +7,28 @@
 <h1>{% trans "Organisation creation" %}</h1>
 
 {% if messages %}
-<ul class="messages">
+<ul class="messages center">
     {% for message in messages %}
-    <li  class="alert-warning ">{{ message }}</li>
+    <li  class="alert-warning center">{{ message }}</li>
     {% endfor %}
 </ul>
 {% endif %}
 
 <!--If message in context -->
 {% if message %}
-    <div class="alert {{message|get_key_by_position:0}}">{{message|get_value_by_position:0}} </div>
+    <div class="alert {{message|get_key_by_position:0}} center">{{message|get_value_by_position:0}} </div>
 {% endif %}
 
-
-<form method="post" id="orga-creation-form">
+<div class="form-center width-35">
+    <div class="column">
+<form method="post" id="orga-creation-form" class="">
     {% csrf_token %}
+
     {% for field in form %}
-      <p>
-        {{ field.label_tag }}<br>
-        {{ field }}
+
+        <span class="float-left">{{ field.label_tag }}</span><br>
+
+          <p >{{ field }}</p>
         {% if field.help_text %}
           <small style="color: grey">{{ field.help_text }}</small>
         {% endif %}
@@ -34,18 +37,22 @@
         {% endfor %}
       </p>
     {% endfor %}
-    <button id="orga-creation" type="submit" class="btn btn-primary bottom-page-button">{% trans "Create" %}</button>
+    <button id="orga-creation" type="submit" class="btn btn-primary same-size-220 margin-10">{% trans "Create" %}</button>
 
   </form>
 
+
+
     {% if skip_button %}
-        <form action="{% url 'home:user-profile' %}">
-            <input  type="submit" class="btn btn-danger bottom-page-button float-right" value="{% trans 'Pass' %}" />
+        <form action="{% url 'home:user-profile' %}" >
+            <input  type="submit" class="btn btn-danger same-size-220 margin-10" value="{% trans 'Pass' %}" />
         </form>
     {% else %}
         <form action="{% url 'home:user-profile' %}">
-            <input type="submit" class="btn btn-danger bottom-page-button float-right" value="{% trans 'Back' %}" />
+            <input type="submit" class="btn btn-danger same-size-220 margin-10" value="{% trans 'Back' %}" />
         </form>
     {% endif %}
+        </div>
+</div>
 
 {% endblock %}
