--- a/platform_code/home/templates/home/profile.html
+++ b/platform_code/home/templates/home/profile.html
@@ -20,20 +20,20 @@
         <div class="col-ms-3 container-platform column-right">
             <ul class="nav nav-pills nav-stacked flex-column table-column-profile" role="tablist">
                 <li class="nav-item column-button">
-                    <a class="nav-link profile-column active" data-toggle="pill"
+                    <a class="nav-link profile-column active" data-toggle="pill" name="column-button"
                        href="#content-eval">{% trans "My evaluations" %}</a>
                 </li>
                 <li class="nav-item column-button">
-                   <a class="nav-link profile-column" data-toggle="pill"
+                   <a class="nav-link profile-column" data-toggle="pill" name="column-button"
                        href="#content-orga">{% trans "Organisation" %}</a>
                 </li>
                 <li class="nav-item column-button">
-                    <a class="nav-link profile-column" data-toggle="pill"
+                    <a class="nav-link profile-column" data-toggle="pill" name="column-button"
                        href="#content-ressource">{% trans "My resources" %}</a>
                 </li>
 
                 <li class="nav-item column-button">
-                    <a class="nav-link profile-column"
+                    <a class="nav-link profile-column" name="column-button"
                        href="{% url 'home:user-profile-settings'%}">{% trans "User settings" %}</a>
                 </li>
             </ul>
