Center the modal title

--- a/platform_code/assessment/static/css/base.css
+++ b/platform_code/assessment/static/css/base.css
@@ -852,6 +852,10 @@ tr.spaceUnder>td {
     width: 65%;
 }
 
+.modal-title{
+    position: absolute;
+}
+
 /******* MEDIA *******/
 
 @media screen and (min-width: 1200px) {
