--- a/platform_code/templates/base-evaluation.html
+++ b/platform_code/templates/base-evaluation.html
@@ -46,6 +46,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive" >
         <ul class="navbar-nav ml-auto" >
             {% if user.is_authenticated %}
+                {% if user.is_staff %}
+                    <li class="nav-item navbar-item">
+                     <a class="nav-link" href="{% url 'admin:index' %}"
+                        >{% trans "Admin" %}
+                     </a>
+                    </li>
+                {% endif %}
                 <li class="nav-item navbar-item">
                  <a class="nav-link" href="{% url 'home:user-profile' %}"
                     >{% trans "My dashboard" %}
